--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Restaurant Roullete</title>
 </head>
 <!-- Test -->
+<!-- thomas -->
 <body>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
