--- a/index.html
+++ b/index.html
@@ -2,16 +2,36 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
     <link rel="stylesheet" href="assets/style.css">
     <title>Restaurant Roullete</title>
 </head>
-<!-- Test -->
+
 <body>
+	<div class="nav-wrapper">
+		<a href="#" class="brand-logo center"><img src="assets/images/rouletter-logo.svg"></a>
+		<form>
+			<div class="input-field location">
+				<input type="search" placeholder="Town or Zip Code">
+			</div>
+		</form>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col s12">
+				
+			</div>
+			
+		</div>
+
+	</div>
+
+
+
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
-    <script src="assets/javascript/bootstrap.min.js"></script>
     <script src="assets/function.js"></script>
 </body>
 
