--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col s12">
-				
+				<img src="assets/images/roulette.svg"/>
 			</div>
 			
 		</div>
