--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Restaurant Roullete</title>
 </head>
+
 <body>
     <div class="nav-wrapper">
         <a href="#" class="brand-logo center"><img src="assets/images/rouletter-logo.svg"></a>
@@ -20,10 +21,12 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-            <a class="waves-effect waves-light btn-large" id="spin">Spin</a>
+                <a class="waves-effect waves-light btn-large" id="spin">Spin</a>
             </div>
         </div>
     </div>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
     <script src="assets/function.js"></script>
@@ -535,7 +538,7 @@
             </radialGradient>
             <circle fill="url(#SVGID_12_)" cx="100" cy="58.261" r="4.664" />
         </g>
-        <animateTransform attributeName="transform" attributeType="XML" type="rotate" from="0" to="360" begin="0s" dur="3s" repeatCount="indefinite"/>
+        <animateTransform attributeName="transform" attributeType="XML" type="rotate" from="0" to="360" begin="0s" dur="3s" repeatCount="indefinite" />
     </svg>
 </div>
 
