--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
+                <div class="svg-container"></div>
                 <a class="waves-effect waves-light btn-large" id="spin">Spin</a>
             </div>
         </div>
@@ -29,9 +30,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
+    <!-- VelocityJS -->
+    <script type="text/javascript" src="assets/velocity.min.js"></script>
     <script src="assets/function.js"></script>
 </body>
 <div class="svg hidden">
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
         <g>
             <g>
