--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
     <link rel="stylesheet" href="assets/style.css">
     <title>Restaurant Roullete</title>
-</head>
-<!-- Test -->
-<!-- thomas -->
-<body>
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
-    <script src="assets/javascript/bootstrap.min.js"></script>
-    <script src="assets/function.js"></script>
-</body>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+  
+
+    <body>
+
+    <div id = "map"></div>
+
+    <div id = "lat"></div>
+
+    <div id = "long"></div>
+
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
+        <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
+        <script src="assets/function.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyeZ3g-L6L0sAt3zhIeRUGcoYzcMXKDTI"></script>
+        <script src=""></script>
+    </body>
+
 
 </html>
+
+<!-- &callback=initMap -->
