--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="row">
                 <div class="input-field location">
                     <input type="search" placeholder="Town or Zip Code">
+                    <!-- TEST -->
                 </div>
                 <div class="col s3 m3 l3">
                     <a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
