--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
             <div class="row">
                 <div class="input-field location">
                     <input type="search" placeholder="Town or Zip Code">
-                    <!-- TEST -->
                 </div>
                 <div class="col s3 m3 l3">
                     <a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
-
                     <ul id="dropdown1" class="dropdown-content">
                         <!-- <li><a value="" disabled selected>Choose your cuisine</option> -->
                         <li><a href="#!">Italian</a></li>
@@ -38,8 +36,7 @@
                         <li><a href="#!">Seafood</a></li>
                         <li><a href="#!">American</a></li>
                         <li><a href="#!">Drinks</a></li>
-                     </ul>
-                    
+                    </ul>
                 </div>
             </div>
         </form>
@@ -47,26 +44,23 @@
     <div id="map"></div>
     <div class="container">
         <div class="row">
-
             <div class="col s12" id="wheel">
-            <div class="col s12"
-            <div class="col s12">
-                <div class="svg-container"></div>
-                <a class="waves-effect waves-light btn-large" id="spin">Spin</a>
+                <div class="col s12" <div class="col s12">
+                    <div class="svg-container"></div>
+                    <a class="waves-effect waves-light btn-large" id="spin">Spin</a>
+                </div>
             </div>
         </div>
-    </div>
-
-
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
-    <!-- VelocityJS -->
-    <script type="text/javascript" src="assets/velocity.min.js"></script>
-    <script src="assets/function.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyeZ3g-L6L0sAt3zhIeRUGcoYzcMXKDTI"></script>
-    <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
+        <!-- Materialize -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
+        <!-- VelocityJS -->
+        <script type="text/javascript" src="assets/velocity.min.js"></script>
+        <script src="assets/function.js"></script>
+        <!-- Google Maps API -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyeZ3g-L6L0sAt3zhIeRUGcoYzcMXKDTI"></script>
+        <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
 </body>
 <div class="svg hidden">
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
