--- a/index.html
+++ b/index.html
@@ -79,16 +79,17 @@
             </div>
         </form>
     </div>
-    <div id="map"></div>
+    
     <div class="container">
         <div class="row">
             <div class="col s12" id="wheel">
                 <div class="col s12" <div class="col s12">
                     <div class="svg-container"></div>
-                    <a class="waves-effect waves-light btn-large" id="spin">Spin</a>
+                    <a class="waves-effect waves-light btn-large spin">Spin</a>
                 </div>
             </div>
         </div>
+        <div id="map"></div>
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
         <!-- Materialize -->
@@ -97,12 +98,12 @@
         <script type="text/javascript" src="assets/velocity.min.js"></script>
         <script src="assets/function.js"></script>
         <!-- Google Maps API -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyeZ3g-L6L0sAt3zhIeRUGcoYzcMXKDTI"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDWzDt9fieUIfutEaGsbL89dDo509JL1M"></script>
         <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
 </body>
 <div class="svg hidden">
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="80%" height="80%" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
         <g>
             <g>
                 <g id="XMLID_1_">
@@ -608,7 +609,7 @@
             </radialGradient>
             <circle fill="url(#SVGID_12_)" cx="100" cy="58.261" r="4.664" />
         </g>
-        <animateTransform attributeName="transform" attributeType="XML" type="rotate" from="0" to="360" begin="0s" dur="3s" repeatCount="indefinite" />
+        
     </svg>
 </div>
 
