--- a/index.html
+++ b/index.html
@@ -13,73 +13,74 @@
     <div class="container" id="container1">
         <div class="nav-wrapper">
             <a href="#" class="brand-logo"><img src="assets/images/rouletter-logo.svg"></a>
-            <form>
-                <div class="row">
+            <div class="row">
+                <form>
                     <ul class="left">
-                        <div class="input-field location">
-                            <input type="search" placeholder="Town or Zip Code">
-                        </div>
-                    </ul>
-                    <div class="input-field">
-                        <a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
-                        <ul id="dropdown1" class="dropdown-content">
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Italian" id="Italian" value="1" />
-                                <label for="Italian">Italian</label>
+                        <li>
+                            <div class="input-field location">
+                                <input type="search" placeholder="Town or Zip Code">
                             </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Mediterranean" id="Mediterranean" value="2" />
-                                <label for="Mediterranean">Mediterranean</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Chinese" id="Chinese" value="3" />
-                                <label for="Chinese">Chinese</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Japanese" id="Japanese" value="4" />
-                                <label for="Japanese">Japanese</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Mexican" id="Mexican" value="5" />
-                                <label for="Mexican">Mexican</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Breakfast" id="Breakfast" value="6" />
-                                <label for="Breakfast">Breakfast</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="BBQ" id="BBQ" value="7" />
-                                <label for="BBQ">BBQ</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Vegan" id="Vegan" value="8" />
-                                <label for="Vegan">Vegan</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Deli" id="Deli" value="9" />
-                                <label for="Deli">Deli</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Thai" id="Thai" value="10" />
-                                <label for="Thai">Thai</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Seafood" id="Seafood" value="11" />
-                                <label for="Seafood">Seafood</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="American" id="American" value="12" />
-                                <label for="American">American</label>
-                            </div>
-                            <div class="cuisine-topics">
-                                <input type="checkbox" name="Drinks" id="Drinks" value="13" />
-                                <label for="Drinks">Drinks</label>
-                            </div>
-                        </ul>
+                        </li>
+               
+            <li><a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
+                <ul id="dropdown1" class="dropdown-content">
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Italian" id="Italian" value="1" />
+                        <label for="Italian">Italian</label>
                     </div>
-                </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Mediterranean" id="Mediterranean" value="2" />
+                        <label for="Mediterranean">Mediterranean</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Chinese" id="Chinese" value="3" />
+                        <label for="Chinese">Chinese</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Japanese" id="Japanese" value="4" />
+                        <label for="Japanese">Japanese</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Mexican" id="Mexican" value="5" />
+                        <label for="Mexican">Mexican</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Breakfast" id="Breakfast" value="6" />
+                        <label for="Breakfast">Breakfast</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="BBQ" id="BBQ" value="7" />
+                        <label for="BBQ">BBQ</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Vegan" id="Vegan" value="8" />
+                        <label for="Vegan">Vegan</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Deli" id="Deli" value="9" />
+                        <label for="Deli">Deli</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Thai" id="Thai" value="10" />
+                        <label for="Thai">Thai</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Seafood" id="Seafood" value="11" />
+                        <label for="Seafood">Seafood</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="American" id="American" value="12" />
+                        <label for="American">American</label>
+                    </div>
+                    <div class="cuisine-topics">
+                        <input type="checkbox" name="Drinks" id="Drinks" value="13" />
+                        <label for="Drinks">Drinks</label>
+                    </div>
+                </ul>
+            </li>
+            </ul>
+            </form>
         </div>
-        </form>
     </div>
     <div class="row">
         <div class="col s12" id="wheel">
