--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         </div>
     </div>
     <div id="map"></div>
+	<!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
     <!-- Materialize -->
