--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         <!-- Google Maps API -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDWzDt9fieUIfutEaGsbL89dDo509JL1M"></script>
         <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
+        <!-- Foursquares API -->
+        <script src=>"https://api.foursquare.com/v2/venues/search?ll=40.7,-74&client_id=1FJHV4PFHEKFZBZSQYSMR4HIQROYJQQWBVFJEOOYPK0VHZ4E&client_secret=MDXKXS4BVTHR13UBMRLJ35PENUSFUDDFZXMHN2IZCDCDBVEZ &v=20170405"</script>
 </body>
 <div class="svg hidden">
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
