--- a/index.html
+++ b/index.html
@@ -24,55 +24,9 @@
                
             <li><a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
                 <ul id="dropdown1" class="dropdown-content">
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Italian" id="Italian" value="1" />
-                        <label for="Italian">Italian</label>
+                    <div class="cuisine-cats">
+                    <!--this div should be populated by categories returned from an api call to zomato for the proper matching ids-->
                     </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Mediterranean" id="Mediterranean" value="2" />
-                        <label for="Mediterranean">Mediterranean</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Chinese" id="Chinese" value="3" />
-                        <label for="Chinese">Chinese</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Japanese" id="Japanese" value="4" />
-                        <label for="Japanese">Japanese</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Mexican" id="Mexican" value="5" />
-                        <label for="Mexican">Mexican</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Breakfast" id="Breakfast" value="6" />
-                        <label for="Breakfast">Breakfast</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="BBQ" id="BBQ" value="7" />
-                        <label for="BBQ">BBQ</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Vegan" id="Vegan" value="8" />
-                        <label for="Vegan">Vegan</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Deli" id="Deli" value="9" />
-                        <label for="Deli">Deli</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Thai" id="Thai" value="10" />
-                        <label for="Thai">Thai</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="Seafood" id="Seafood" value="11" />
-                        <label for="Seafood">Seafood</label>
-                    </div>
-                    <div class="cuisine-topics">
-                        <input type="checkbox" name="American" id="American" value="12" />
-                        <label for="American">American</label>
-                    </div>
-                   
                 </ul>
             </li>
             </ul>
@@ -84,30 +38,12 @@
             <div class="col s12">
                 <div class="svg-container"></div>
                 <a class="waves-effect waves-light btn-large spin">Spin</a>
-
             </div>
         </div>
-<<<<<<< HEAD
-        <div id="map"></div>
-        <!-- Firebase -->
-        <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
-        <!-- JQuery -->
-        <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
-        <!-- Materialize -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
-        <!-- VelocityJS -->
-        <script type="text/javascript" src="assets/velocity.min.js"></script>
-        <script src="assets/function.js"></script>
-        <!-- Google Maps API -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDWzDt9fieUIfutEaGsbL89dDo509JL1M"></script>
-        <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
-        <!-- Foursquares API -->
-        <script src=>"https://api.foursquare.com/v2/venues/search?ll=40.7,-74&client_id=1FJHV4PFHEKFZBZSQYSMR4HIQROYJQQWBVFJEOOYPK0VHZ4E&client_secret=MDXKXS4BVTHR13UBMRLJ35PENUSFUDDFZXMHN2IZCDCDBVEZ &v=20170405"</script>
-=======
     </div>
     <div id="map"></div>
-    <!-- Firebase -->
-	<script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
+	<!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
     <!-- Materialize -->
@@ -118,7 +54,6 @@
     <!-- Google Maps API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDWzDt9fieUIfutEaGsbL89dDo509JL1M"></script>
     <!-- <script src="httlp://maps.google.com/maps/api/js?sensor=true"></script> -->
->>>>>>> d5a578bbac78d516cfd2c79171b3d17a3702787f
 </body>
 <div class="svg hidden">
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
