--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- css style file -->
     <link rel="stylesheet" href="assets/style.css">
     <!-- google log in api -->
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-    <meta name="google-signin-client_id" content="1096863395822-vafo1gdin0ml7q70hrerlirdtn4g178u.apps.googleusercontent.com">
+<!--     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+ -->    <!-- <meta name="google-signin-client_id" content="1096863395822-vafo1gdin0ml7q70hrerlirdtn4g178u.apps.googleusercontent.com"> -->
     <title>Restaurant Roullete</title>
 </head>
 
@@ -29,7 +29,9 @@
                         </li>
                     </ul>
                     <!-- google sign in -->
-                    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                    <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                	sign out
+                    <a href="#" onclick="signOut();">Sign out</a> -->
                     <!-- dropdown button with cuisine topics -->
                     <a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
                     <ul id="dropdown1" class="dropdown-content">
