--- a/index.html
+++ b/index.html
@@ -20,79 +20,22 @@
             <!-- roulette logo -->
 
             <a href="#" class="brand-logo"><img src="assets/images/rouletter-logo.svg"></a>
-            <div class="row">
-                <form>
-                    <ul class="left">
+                    <ul class="right">
                         <li>
-
                             <!-- zip code box -->
-
                             <div class="input-field location">
                                 <input type="search" placeholder="Town or Zip Code">
                             </div>
                         </li>
-                        <li><a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
-                            <ul id="dropdown1" class="dropdown-content">
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Italian" id="Italian" value="1" />
-                                    <label for="Italian">Italian</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Mediterranean" id="Mediterranean" value="2" />
-                                    <label for="Mediterranean">Mediterranean</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Chinese" id="Chinese" value="3" />
-                                    <label for="Chinese">Chinese</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Japanese" id="Japanese" value="4" />
-                                    <label for="Japanese">Japanese</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Mexican" id="Mexican" value="5" />
-                                    <label for="Mexican">Mexican</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Breakfast" id="Breakfast" value="6" />
-                                    <label for="Breakfast">Breakfast</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="BBQ" id="BBQ" value="7" />
-                                    <label for="BBQ">BBQ</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Vegan" id="Vegan" value="8" />
-                                    <label for="Vegan">Vegan</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Deli" id="Deli" value="9" />
-                                    <label for="Deli">Deli</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Thai" id="Thai" value="10" />
-                                    <label for="Thai">Thai</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="Seafood" id="Seafood" value="11" />
-                                    <label for="Seafood">Seafood</label>
-                                </div>
-                                <div class="cuisine-topics">
-                                    <input type="checkbox" name="American" id="American" value="12" />
-                                    <label for="American">American</label>
-                                </div>
-                            </ul>
-                        </li>
-                    </ul>
 
                     <!-- google sign in -->
 
-                    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-                    <li><a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
+                   <!--  <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+                    <!-- <li><a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
                         <ul id="dropdown1" class="dropdown-content">
-                            <div class="cuisine-cats">
+                            <div class="cuisine-cats"> -->
                                 <!--this div should be populated by categories returned from an api call to zomato for the proper matching ids-->
-                            </div>
+                           <!--  </div> -->
                         </ul>
 
                     </li>
