--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
             <a class="svg-container spin"></a>
             <!--  <a class="waves-effect waves-light btn-large spin">Spin</a> -->
             <!-- </div> -->
+
         </div>
+    </div>
+    <div class="row">
+    	<div class="col s2">
+    		<input class="button" id="hide" type=button value="Delete Markers">
+    	</div>
     </div>
     </div>
     <div id="map"></div>
