--- a/rouletter.html
+++ b/rouletter.html
@@ -26,7 +26,7 @@
                 </li>
                 <!-- google sign in -->
                 <!--  <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-                <a class="waves-effect waves-light btn"><i class="material-icons left">navigation</i>button</a>
+                <button id="nav"<a class="waves-effect waves-light btn"><i class="material-icons left">navigation</i>directions</a></button>
                 <li><a class="dropdown-button btn" href="#" data-activates='dropdown1'>Cuisine</a>
                     <ul id="dropdown1" class="dropdown-content">
                         <div class="cuisine-cats">
