--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="assets/images/roulette.ico" />
     <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
     <script>
     // Initialize Firebase
@@ -60,7 +61,7 @@
     // The start method will wait until the DOM is loaded.
     ui.start('#firebaseui-auth-container', uiConfig);
     </script>
-    <title>Train Timing</title>
+    <title>RoulletteR</title>
 </head>
 
 <body>
