--- a/rouletter.html
+++ b/rouletter.html
@@ -10,7 +10,7 @@
     <!--     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
  -->
     <!-- <meta name="google-signin-client_id" content="1096863395822-vafo1gdin0ml7q70hrerlirdtn4g178u.apps.googleusercontent.com"> -->
-    <title>RoulletteR</title>
+    <title>RouletteR</title>
 </head>
 
 <body>
